plugins {
	id 'org.springframework.boot' version '2.7.3'
	id 'io.spring.dependency-management' version '1.0.13.RELEASE'
	id 'java'
	id 'application'
}

group = 'com.zerologix.interview'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-cassandra'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'com.datastax.oss:java-driver-core:4.14.1'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.mockito:mockito-core:4.7.0'
}

application {
	mainClass = 'com.zerologix.interview.tradeengine.TradeEngineApplication'
}

tasks.named('test') {
	useJUnitPlatform()
}
